// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkLoadingButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "destructive" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--destructive"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "disabled" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "featured" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--featured"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "iconOnly" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--large-icon-only"
    type="button"
  >
    <span
      class="visually-hidden"
    >
      Search
    </span>
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "link" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link bpk-button--link-large"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "linkOnDark" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link-on-dark bpk-button--link-on-dark-large"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "loading" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-loading-button"
    disabled=""
    type="button"
  >
    <span
      class="bpk-loading-button__icon bpk-loading-button__icon--large"
    >
      <span
        class="bpk-spinner bpk-spinner--large bpk-spinner--dark bpk-spinner--align-to-large-button"
      >
        <svg
          aria-hidden="true"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 6.657a.946.946 0 01-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 01-.943.943z"
            opacity=".65"
          />
          <path
            clip-rule="evenodd"
            d="M14.671 7.373a.946.946 0 01-.345-1.288l1.886-3.266a.946.946 0 011.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 01-1.288.345z"
            opacity=".75"
          />
          <path
            clip-rule="evenodd"
            d="M16.627 9.329a.945.945 0 01.345-1.288l3.266-1.886a.946.946 0 011.288.345.946.946 0 01-.345 1.288l-3.266 1.886a.946.946 0 01-1.288-.345z"
            opacity=".85"
          />
          <path
            clip-rule="evenodd"
            d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 01-.943.943h-3.771a.946.946 0 01-.943-.943z"
            opacity=".9"
          />
          <path
            clip-rule="evenodd"
            d="M16.627 14.671a.946.946 0 011.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 01-1.288.345l-3.266-1.886a.946.946 0 01-.345-1.288z"
            opacity=".2"
          />
          <path
            clip-rule="evenodd"
            d="M14.671 16.627a.946.946 0 011.288.345l1.886 3.266a.946.946 0 01-.345 1.288.945.945 0 01-1.288-.345l-1.886-3.266a.946.946 0 01.345-1.288z"
            opacity=".25"
          />
          <path
            clip-rule="evenodd"
            d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0112 23a.946.946 0 01-.943-.943v-3.771c0-.519.424-.943.943-.943z"
            opacity=".3"
          />
          <path
            clip-rule="evenodd"
            d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 01-1.288.345.946.946 0 01-.345-1.288l1.886-3.266a.946.946 0 011.288-.345z"
            opacity=".35"
          />
          <path
            clip-rule="evenodd"
            d="M7.373 14.671a.946.946 0 01-.345 1.288l-3.266 1.886a.946.946 0 01-1.288-.345.946.946 0 01.345-1.288l3.266-1.886a.946.946 0 011.288.345z"
            opacity=".4"
          />
          <path
            clip-rule="evenodd"
            d="M6.657 12a.946.946 0 01-.943.943H1.943A.946.946 0 011 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
            opacity=".45"
          />
          <path
            clip-rule="evenodd"
            d="M7.373 9.329a.946.946 0 01-1.288.345L2.819 7.788A.946.946 0 012.474 6.5a.946.946 0 011.288-.345L7.028 8.04a.946.946 0 01.345 1.288z"
            opacity=".5"
          />
          <path
            clip-rule="evenodd"
            d="M9.329 7.373a.946.946 0 01-1.288-.345L6.155 3.762A.946.946 0 016.5 2.474a.946.946 0 011.288.345l1.886 3.266a.946.946 0 01-.345 1.288z"
            opacity=".55"
          />
        </svg>
      </span>
    </span>
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "primaryOnDark" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-dark"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "primaryOnLight" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--primary-on-light"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "secondary" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "secondaryOnDark" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary-on-dark"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "destructive" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--destructive"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "featured" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "icon" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5m2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconDisabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5m2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconLoading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-loading-button"
    disabled=""
    type="button"
  >
    <span
      class="bpk-loading-button__icon"
    >
      <span
        style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          aria-hidden="true"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5m2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5"
          />
        </svg>
      </span>
    </span>
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only"
    type="button"
  >
    <span
      class="visually-hidden"
    >
      Search
    </span>
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconPosition=leading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    type="button"
  >
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
     My button
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "link" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "linkOnDark" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link-on-dark"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "loading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-loading-button"
    disabled=""
    type="button"
  >
    <span
      class="bpk-loading-button__icon"
    >
      <span
        class="bpk-spinner bpk-spinner--dark bpk-spinner--align-to-button"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
            opacity=".45"
          />
          <path
            d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
          />
          <path
            d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
            opacity=".3"
          />
          <path
            d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
            opacity=".65"
          />
          <path
            d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
            opacity=".25"
          />
          <path
            d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
            opacity=".55"
          />
          <path
            d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
            opacity=".2"
          />
          <path
            d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
            opacity=".5"
          />
          <path
            d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
            opacity=".85"
          />
          <path
            d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
            opacity=".4"
          />
          <path
            d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
            opacity=".75"
          />
          <path
            d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
            opacity=".35"
          />
        </svg>
      </span>
    </span>
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "primaryOnDark" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-dark"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "primaryOnLight" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--primary-on-light"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "secondary" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "secondaryOnDark" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary-on-dark"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary custom-class-1 custom-class-2"
    type="button"
  >
    My button 
    <span
      style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1.5rem"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
